--- a/src-docs/src/index.html
+++ b/src-docs/src/index.html
@@ -14,7 +14,7 @@
     <meta property="og:image" content="https://repository-images.githubusercontent.com/107422373/b6180480-a1d7-11eb-8a3c-902086232aa7">
     <meta property="og:url" content="hhttps://elastic.github.io/eui">
     <meta name="twitter:card" content="summary_large_image">
-    <style id="emotion-global-insert"></style>
+    <meta name="emotion-global">
   </head>
   <body class="guideBody">
     <div id="guide"></div>
